# cep-78-enhanced-nft

./: .drone.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json  rust-toolchain
.github/workflows/: ci-cep-78-client.yml  ci-cep-78-enhanced-nft.yml  nightly-scheduled-test.yml  publish-cep-78-client.yml  publish-cep-78-contracts.yml
balance_of_session/: Cargo.toml
balance_of_session/src/: main.rs
burn_session/: Cargo.toml
burn_session/src/: main.rs
ci/: package_wasm.sh
client-js/: .eslintrc.js  .gitignore  .npmignore  CHANGELOG.md  README.md  TUTORIAL.md  copy-wasms.sh  deploy.json  list-rpc.json  package-lock.json  package.json  tsconfig.json  tslint.json  x.json
client-js/e2e/: install.ts  usage-approvals.ts  usage.ts
client-js/examples/: common.ts  install.ts  usage.ts
client-js/scripts/: convert.ts  copy-and-convert-wasms.ts
client-js/src/: constants.ts  events.ts  index.ts  types.ts  utils.ts
client-js/test/: common.ts  index.test.ts  install.ts  usage.ts
client-js/test/jsons/: approve-all-args.json  approve-args.json  balance-of-args.json  burn-args.json  get-approved-args.json  install-args-v1-custom.json  install-args-v1-standard.json  install-args.json  migrate-args.json  mint-args.json  owner-of-args.json  register-args.json  set-metadata-args.json  set-variables-args.json  transfer-args.json  updated-reciepients-args.json
client/balance_of_session/: Cargo.toml  README.md
client/balance_of_session/src/: main.rs
client/get_approved_session/: Cargo.toml  README.md
client/get_approved_session/src/: main.rs
client/get_events_session/: Cargo.toml
client/get_events_session/src/: main.rs
client/is_approved_for_all_session/: Cargo.toml  README.md
client/is_approved_for_all_session/src/: main.rs
client/migrate/: Cargo.toml
client/migrate/src/: main.rs
client/mint_session/: Cargo.toml  README.md
client/mint_session/src/: main.rs
client/minting_contract/: Cargo.toml  README.md
client/minting_contract/src/: main.rs
client/owner_of_session/: Cargo.toml  README.md
client/owner_of_session/src/: main.rs
client/transfer_session/: Cargo.toml  README.md
client/transfer_session/src/: main.rs
client/updated_receipts/: Cargo.toml  README.md
client/updated_receipts/src/: main.rs
contract/: Cargo.toml  README.md
contract/src/: constants.rs  error.rs  events.rs  lib.rs  main.rs  metadata.rs  modalities.rs  page.rs  upgrade.rs  utils.rs  x.json
contract/src/events/: events_cep47.rs  events_cep78.rs  events_ces.rs  native.rs
docs/: modalities.md  reverse-lookup.md  using-casper-client.md
docs/tutorials/: custom-migration-tutorial.md  full-installation-tutorial.md  query.md  quickstart-guide.md  standard-migration-tutorial.md  token-ownership-tutorial.md
docs/tutorials/getting started/: full-installation-tutorial.md  query.md  quickstart-guide.md  tests.md  transfer.md
docs/tutorials/getting-started/: full-installation-tutorial.md  interacting-with-NFTs.md  querying-NFTs.md  quickstart-guide.md  testing-NFTs.md
entrypoint_session/: Cargo.toml
entrypoint_session/src/: main.rs
mint_session/: Cargo.toml
mint_session/src/: main.rs
nft-core/contract/: Cargo.toml
nft-core/contract/src/: lib.rs
nft-core/tests/: Cargo.toml
nft-core/tests/src/: integration_tests.rs
nft-installer/: Cargo.toml  rust-toolchain
nft-installer/src/: main.rs
nft-tests/: Cargo.toml
nft-tests/src/: lib.rs
owner_of_session/: Cargo.toml
owner_of_session/src/: main.rs
test-contracts/mangle_named_keys/: Cargo.toml
test-contracts/mangle_named_keys/src/: main.rs
test-contracts/minting_contract/: Cargo.toml  README.md
test-contracts/minting_contract/src/: main.rs
test-contracts/transfer_filter/: Cargo.toml
test-contracts/transfer_filter/src/: main.rs
test-contracts/transfer_filter_contract/: Cargo.toml  README.md
test-contracts/transfer_filter_contract/src/: main.rs
tests/: Cargo.toml
tests/src/: acl.rs  burn.rs  costs.rs  events.rs  installer.rs  lib.rs  metadata.rs  mint.rs  set_variables.rs  transfer.rs  upgrade.rs
tests/src/tests/: abc.rs  burn_tests.rs  constants.rs  installer_request_builder.rs  installer_tests.rs  integration_tests.rs  mint_tests.rs  mod.rs  set_variables_tests.rs  transfer_tests.rs  utils.rs
tests/src/utility/: constants.rs  installer_request_builder.rs  mod.rs  support.rs
tutorials/: custom-migration-tutorial.md  standard-migration-tutorial.md  token-ownership-tutorial.md
