[package]
name = "contract"
version = "1.4.0"
edition = "2018"

[dependencies]
casper-contract = { version = "*", default-features = false, features = [
  "test-support",
], optional = true }
casper-types = "*"
serde = { version = "1.0.80", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
serde-json-wasm = { version = "0.5.1", default-features = false }
base16 = { version = "0.2.1", default-features = false }
casper-event-standard = { version = "*", default-features = false }
hex = { version = "0.4.3", default-features = false }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["contract-support"]
contract-support = ["dep:casper-contract"]

[patch.crates-io]
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
casper-contract = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }