[package]
name = "tests"
version = "1.4.0"
edition = "2018"

[dependencies]
casper-engine-test-support = { version = "4.0.0", default-features = false, features = [
  "test-support",
] }
contract = { path = "../contract", default-features = false }
casper-execution-engine = { version = "4.0.0", default-features = false }
casper-types = "2.0.0"
serde = { version = "1.0.80", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
once_cell = "1"
blake2 = { version = "0.9.0", default-features = false }
base16 = { version = "0.2.1", default-features = false }
rand = "0.8.5"
sha256 = "1.0.3"
casper-event-standard = { version = "0.3.0", default-features = false }
