[package]
name = "tests"
version = "1.4.0"
edition = "2018"
[dependencies]
casper-engine-test-support = { version = "*", default-features = false }
contract = { path = "../contract", default-features = false }
casper-execution-engine = { version = "*", default-features = false }
casper-types = "*"
serde = { version = "1.0.80", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
once_cell = "1"
blake2 = { version = "0.9.0", default-features = false }
base16 = { version = "0.2.1", default-features = false }
rand = "0.8.5"
sha256 = "1.0.3"
casper-event-standard = { version = "*", default-features = false }
casper-storage = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }

[patch.crates-io]
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
casper-engine-test-support = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
casper-execution-engine = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
