[package]
name = "is_approved_for_all_session"
version = "1.2.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.5"

[[bin]]
name = "is_approved_for_all_call"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
