[package]
name = "is_approved_for_all_session"
version = "1.4.0"
edition = "2018"

[dependencies]
casper-contract = "2.0.0"
casper-types = "2.0.0"

[[bin]]
name = "is_approved_for_all_call"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
