[package]
name = "mint_session"
version = "1.4.0"
edition = "2018"

[dependencies]
casper-contract = "*"
casper-types = "*"

[[bin]]
name = "mint_call"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

[patch.crates-io]
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
casper-contract = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
