[package]
name = "nft-contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = {version = "1.4.3", default-features = false, features = ["test-support"] }
casper-types = "1.4.6"

[[bin]]
name = "nft_contract"
path = "src/bin/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

