[package]
name = "mangle_named_keys"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "3.0.0"
casper-types = "3.0.0"

[[bin]]
name = "mangle_named_keys"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
