[package]
name = "minting_contract"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { version = "2.0.0", features = ["test-support"] }
casper-types = "2.0.0"

[[bin]]
name = "minting_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
