[package]
name = "transfer_filter_contract"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { version = "1.4.3", features = ["test-support"] }
casper-types = "1.5"

[[bin]]
name = "transfer_filter_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
